--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <ul>
-      <li><a class="page-link" href="./1-gallery.html">Gallery</a></li>
-      <li><a class="page-link" href="./2-form.html">Form</a></li>
+      <li><a class="page-link" href="./1-timer.html">Timer</a></li>
+      <li><a class="page-link" href="./2-snackbar.html">Snackbar</a></li>
     </ul>
   </body>
 </html>
