add icon-path attribute

--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -7,7 +7,7 @@
     <title>Snackbar</title>
     <link rel="stylesheet" href="./css/snackbar-styles.css" />
   </head>
-  <body>
+  <body icon-path="error.svg" icon-path="check.svg">
     <a href="./index.html" class="back-link">Go back</a>
     <form class="form">
       <label>
