--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -7,7 +7,7 @@
     <title>Timer</title>
     <link rel="stylesheet" href="./css/timer-styles.css" />
   </head>
-  <body>
+  <body icon-path="error.svg">
     <a href="./index.html" class="back-link">Go back</a>
     <input type="text" id="datetime-picker" />
     <button type="button" data-start>Start</button>
